@@ -8,9 +8,8 @@ package dev.neuralnexus.switchboard.config;
 import dev.neuralnexus.switchboard.Switchboard;
 import dev.neuralnexus.switchboard.config.versions.SwitchboardConfig_V1;
 import dev.neuralnexus.switchboard.config.versions.VersionedConfig;
+import dev.neuralnexus.switchboard.logger.Logger;
 
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.spongepowered.configurate.CommentedConfigurationNode;
 import org.spongepowered.configurate.ConfigurateException;
 import org.spongepowered.configurate.hocon.HoconConfigurationLoader;
@@ -21,35 +20,23 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 
 /** A class for loading Switchboard configuration. */
-public class SwitchboardConfigLoader {
-    private static final Logger logger =
-            LoggerFactory.getLogger(Switchboard.PROJECT_ID + "-configloader");
+public final class SwitchboardConfigLoader {
+    private static final Logger logger = Logger.create(Switchboard.PROJECT_ID + "-configloader");
     private static Path configPath =
-            Path.of(
-                    Paths.get(".").toAbsolutePath().normalize()
-                            + File.separator
-                            + Switchboard.PROJECT_ID
-                            + File.separator
-                            + Switchboard.PROJECT_ID
-                            + ".conf");
+            Paths.get(".").toAbsolutePath().normalize().resolve(Switchboard.PROJECT_ID);
     private static HoconConfigurationLoader loader;
     private static SwitchboardConfig config;
 
     public static void setBasePath(Path path) {
-        configPath =
-                Path.of(
-                        path
-                                + File.separator
-                                + Switchboard.PROJECT_ID
-                                + File.separator
-                                + Switchboard.PROJECT_ID
-                                + ".conf");
+        configPath = Path.of(path + File.separator + Switchboard.PROJECT_ID);
     }
 
     /** Load the configuration from the file. */
     public static void load() {
-
-        loader = HoconConfigurationLoader.builder().path(configPath).build();
+        loader =
+                HoconConfigurationLoader.builder()
+                        .path(configPath.resolve(Switchboard.PROJECT_ID + ".conf"))
+                        .build();
         CommentedConfigurationNode node = null;
         try {
             node = loader.load();
